Fixed Error Modal z-index

--- a/src/stylesheets/common/_modal-error.scss
+++ b/src/stylesheets/common/_modal-error.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.9);
+  z-index: 3000;
 
   &__content {
     position: relative;
